--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ main
 
 # VS Code settings (optional - remove this line if you want to keep VS Code settings)
 .vscode/
+
+# Portfolio notes (personal reference)
+PORTFOLIO_PRESENTATION_NOTES.md
